welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:3: error: type mismatch;
 found   : Unit
 required: Int
    cpt=deuxl(2*a,cpt)
             ^ZigZag:26: warning: enclosing method deuxl has result type Unit: return value discarded
  return cpt2
  ^